--- a/DSC510/README
+++ b/DSC510/README
@@ -1,2 +1,3 @@
 # These files are the exercises and project completed for DSC 510: Introduction to Programming
 # Grade received: A
+# Used PyCharm IDE, Python
