--- a/DSC500/README
+++ b/DSC500/README
@@ -1,2 +1,3 @@
 # These files are the exercises and project completed for DSC 500: Introduction to Data Science
 # Grade received: A
+# Used Excel, Word, PowerPoint
