--- a/DSC520/README
+++ b/DSC520/README
@@ -1,2 +1,3 @@
 # These files are the exercises and project completed for DSC 520: Statistics for Data Science
 # Grade received: A
+# Used R, R Markdown
